{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 110,
  "lineage": "fd7acb33-5c42-b08b-2f11-34943f29076b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "vpc-0fd7acb330001",
            "cidr_block": "10.10.0.0/16",
            "default": false,
            "enable_dns_support": true,
            "enable_dns_hostnames": true,
            "dhcp_options_id": "dopt-0fd7acb330001",
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-vpc"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "subnet-0e175e75701",
            "vpc_id": "vpc-0fd7acb330001",
            "cidr_block": "10.10.1.0/24",
            "availability_zone": "ap-northeast-1a",
            "map_public_ip_on_launch": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-public-1"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-public-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "subnet-04e52e16f01",
            "vpc_id": "vpc-0fd7acb330001",
            "cidr_block": "10.10.2.0/24",
            "availability_zone": "ap-northeast-1c",
            "map_public_ip_on_launch": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-public-2"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-public-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "subnet-0d25ec09e01",
            "vpc_id": "vpc-0fd7acb330001",
            "cidr_block": "10.10.11.0/24",
            "availability_zone": "ap-northeast-1a",
            "map_public_ip_on_launch": false,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-private-1"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-private-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "subnet-05867020c01",
            "vpc_id": "vpc-0fd7acb330001",
            "cidr_block": "10.10.12.0/24",
            "availability_zone": "ap-northeast-1c",
            "map_public_ip_on_launch": false,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-private-2"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-private-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "igw-0fd7acb330001",
            "vpc_id": "vpc-0fd7acb330001",
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-igw"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-igw"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "eipalloc-04c1ffcd701",
            "public_ip": "54.20.20.105",
            "domain": "vpc",
            "vpc": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-eip-nat-1"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-eip-nat-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "nat-0acf2d22601",
            "subnet_id": "subnet-0e175e75701",
            "allocation_id": "eipalloc-04c1ffcd701",
            "connectivity_type": "public",
            "state": "available",
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-nat-az1"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-nat-az1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "eipalloc-05ebfbcf201",
            "public_ip": "54.20.40.110",
            "domain": "vpc",
            "vpc": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-eip-nat-2"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-eip-nat-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "nat-0a6a1af5a01",
            "subnet_id": "subnet-04e52e16f01",
            "allocation_id": "eipalloc-05ebfbcf201",
            "connectivity_type": "public",
            "state": "available",
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-nat-az2"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-nat-az2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sg-05fdfc5ad01",
            "name": "financial-prod-sg-alb",
            "description": "ALB security group",
            "vpc_id": "vpc-0fd7acb330001",
            "ingress": [
              {
                "from_port": 80,
                "to_port": 80,
                "protocol": "tcp",
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "security_groups": [],
                "self": false,
                "description": "HTTP"
              },
              {
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp",
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "security_groups": [],
                "self": false,
                "description": "HTTPS"
              }
            ],
            "egress": [
              {
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1",
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "security_groups": [],
                "self": false,
                "description": ""
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-sg-alb"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-sg-alb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sg-00dfb277901",
            "name": "financial-prod-sg-app",
            "description": "App server security group",
            "vpc_id": "vpc-0fd7acb330001",
            "ingress": [
              {
                "from_port": 8080,
                "to_port": 8080,
                "protocol": "tcp",
                "cidr_blocks": [],
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "security_groups": [
                  "sg-05fdfc5ad01"
                ],
                "self": false,
                "description": "From ALB"
              },
              {
                "from_port": 22,
                "to_port": 22,
                "protocol": "tcp",
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "security_groups": [],
                "self": false,
                "description": "SSH from internal"
              }
            ],
            "egress": [
              {
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1",
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "security_groups": [],
                "self": false,
                "description": ""
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-sg-app"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-sg-app"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "sg-09c8f52ea01",
            "name": "financial-prod-sg-rds",
            "description": "RDS security group",
            "vpc_id": "vpc-0fd7acb330001",
            "ingress": [
              {
                "from_port": 1521,
                "to_port": 1521,
                "protocol": "tcp",
                "cidr_blocks": [],
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "security_groups": [
                  "sg-00dfb277901"
                ],
                "self": false,
                "description": "From App tier"
              }
            ],
            "egress": [
              {
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1",
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "security_groups": [],
                "self": false,
                "description": ""
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-sg-rds"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-sg-rds"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "i-01d7e10b001",
            "ami": "ami-0d52744d6551d851e",
            "instance_type": "c5.2xlarge",
            "instance_state": "running",
            "vpc_id": "vpc-0fd7acb330001",
            "subnet_id": "subnet-0d25ec09e01",
            "availability_zone": "ap-northeast-1a",
            "private_ip": "10.10.11.10",
            "vpc_security_group_ids": [
              "sg-00dfb277901"
            ],
            "key_name": "financial-prod-keypair",
            "iam_instance_profile": "financial-prod-ec2-profile",
            "monitoring": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-app-01",
              "Application": "金融サービス",
              "Language": "java",
              "Framework": "spring",
              "Runtime": "none",
              "DeployMethod": "ec2",
              "Branch": "main"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-app-01",
              "Application": "金融サービス",
              "Language": "java",
              "Framework": "spring",
              "Runtime": "none",
              "DeployMethod": "ec2",
              "Branch": "main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "i-0331c1c2101",
            "ami": "ami-0d52744d6551d851e",
            "instance_type": "c5.2xlarge",
            "instance_state": "running",
            "vpc_id": "vpc-0fd7acb330001",
            "subnet_id": "subnet-05867020c01",
            "availability_zone": "ap-northeast-1c",
            "private_ip": "10.10.11.20",
            "vpc_security_group_ids": [
              "sg-00dfb277901"
            ],
            "key_name": "financial-prod-keypair",
            "iam_instance_profile": "financial-prod-ec2-profile",
            "monitoring": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-app-02",
              "Application": "金融サービス",
              "Language": "java",
              "Framework": "spring",
              "Runtime": "none",
              "DeployMethod": "ec2",
              "Branch": "main"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-app-02",
              "Application": "金融サービス",
              "Language": "java",
              "Framework": "spring",
              "Runtime": "none",
              "DeployMethod": "ec2",
              "Branch": "main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "i-020db753901",
            "ami": "ami-0d52744d6551d851e",
            "instance_type": "c5.2xlarge",
            "instance_state": "running",
            "vpc_id": "vpc-0fd7acb330001",
            "subnet_id": "subnet-0d25ec09e01",
            "availability_zone": "ap-northeast-1a",
            "private_ip": "10.10.11.30",
            "vpc_security_group_ids": [
              "sg-00dfb277901"
            ],
            "key_name": "financial-prod-keypair",
            "iam_instance_profile": "financial-prod-ec2-profile",
            "monitoring": true,
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-app-03",
              "Application": "金融サービス",
              "Language": "java",
              "Framework": "spring",
              "Runtime": "none",
              "DeployMethod": "ec2",
              "Branch": "main"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-app-03",
              "Application": "金融サービス",
              "Language": "java",
              "Framework": "spring",
              "Runtime": "none",
              "DeployMethod": "ec2",
              "Branch": "main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:loadbalancer/app/financial-prod-alb/0fd7acb330001",
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:loadbalancer/app/financial-prod-alb/0fd7acb330001",
            "name": "financial-prod-alb",
            "dns_name": "financial-prod-alb-64890.ap-northeast-1.elb.amazonaws.com",
            "internal": false,
            "load_balancer_type": "application",
            "subnets": [
              "subnet-0e175e75701",
              "subnet-04e52e16f01"
            ],
            "security_groups": [
              "sg-05fdfc5ad01"
            ],
            "vpc_id": "vpc-0fd7acb330001",
            "state": "active",
            "idle_timeout": 60,
            "enable_deletion_protection": true,
            "access_logs": [
              {
                "enabled": true,
                "bucket": "financial-prod-logs-222233334444",
                "prefix": "alb"
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-alb"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-alb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:targetgroup/financial-prod-tg/09ce2763701",
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:targetgroup/financial-prod-tg/09ce2763701",
            "name": "financial-prod-tg",
            "protocol": "HTTP",
            "port": 8080,
            "target_type": "instance",
            "vpc_id": "vpc-0fd7acb330001",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:loadbalancer/app/financial-prod-alb/0fd7acb330001"
            ],
            "health_check": [
              {
                "enabled": true,
                "path": "/health",
                "protocol": "HTTP",
                "port": "traffic-port",
                "interval": 30,
                "timeout": 5,
                "healthy_threshold": 3,
                "unhealthy_threshold": 3
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-tg"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform",
              "Name": "financial-prod-tg"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:listener/app/financial-prod-alb/0fd7acb330001/09ba4539d01",
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:listener/app/financial-prod-alb/0fd7acb330001/09ba4539d01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:loadbalancer/app/financial-prod-alb/0fd7acb330001",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:222233334444:certificate/57570515-7ed7-7e89-0f99-7a9728e16d1e",
            "default_action": [
              {
                "type": "forward",
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:targetgroup/financial-prod-tg/09ce2763701",
                "redirect": [],
                "fixed_response": []
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:listener/app/financial-prod-alb/0fd7acb330001/00ebd0ee301",
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:listener/app/financial-prod-alb/0fd7acb330001/00ebd0ee301",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:222233334444:loadbalancer/app/financial-prod-alb/0fd7acb330001",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": null,
            "certificate_arn": null,
            "default_action": [
              {
                "type": "redirect",
                "target_group_arn": null,
                "redirect": [
                  {
                    "port": "443",
                    "protocol": "HTTPS",
                    "status_code": "HTTP_301",
                    "host": "#{host}",
                    "path": "/#{path}",
                    "query": "#{query}"
                  }
                ],
                "fixed_response": []
              }
            ],
            "tags": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "PROD",
              "System": "金融サービス",
              "ManagedBy": "terraform"
            }
          }
        }
      ]
    }
  ]
}